--- a/index.html
+++ b/index.html
@@ -1,20 +1,26 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="utf-8">
     <title>Demo</title>
     <link rel="stylesheet" href="main.css" media="screen" title="no title" charset="utf-8">
 
   </head>
+
   <body>
       <div class="header">
         <div class="avatar"></div>
-        <h1>Hi,I'am Sherry!<h1>
+        <h1>Hi,I'am Sherry Pan!<h1>
       </div>
       <ul id="menue">
-        <li>one<li>
-          <li>two<li>
-          <li>three<li>
-            <li>four<li>  
+        <li><a class="current" href= "https://www.baidu.com " >WORK</a><li>
+          <li><a href="https://www.baidu.com" >EXPERIENCE</a><li>
+          <li><a href="https://www.baidu.com" >PHOTOS</a><li>
+            <li><a href="https://www.baidu.com" >CONTACT</a><li>
+            </ul>
+              <div class="details">
+            <h1>WHAT I DO<h1>
+              <!-- <div class="s_content"> -->
+
   </body>
 </html>
